--- a/src/Page.css
+++ b/src/Page.css
@@ -1,4 +1,3 @@
-
 .Page-main {
    /* width: min(100%, min(695px, 100vh*(var(--ratio))));
    height: min(100%, min(842px, 100vh*(var(--ratio)))); */
@@ -6,12 +5,13 @@
    aspect-ratio: var(--ratio);
    width: min(100%, 695px);
    height: min(100%, 842px);
+   min-height: 842px;
    margin: 20px auto;
    padding: min(10%, 40px);
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
-   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14),
-      0 1px 18px 0 rgba(0, 0, 0, 0.12),
-      0 3px 5px -1px rgba(0, 0, 0, 0.20);
+   box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
+      0 3px 3px -2px rgba(0, 0, 0, 0.12),
+      0 1px 8px 0 rgba(0, 0, 0, 0.20);
 }
