Added contacto information

--- a/src/Page.css
+++ b/src/Page.css
@@ -25,7 +25,7 @@
       font-size: 3.5vmin !important;
    }
 
-   h1, h3, p, li {
+   h1, h3, p, li, span {
       font-size: 1.5vmin !important;
    }
 
